# rinha-2025

./: Cargo.toml  watch.sh
.github/workflows/: liny.yml
src/: config.rs  lib.rs  main.rs  models.rs
src/api/: mod.rs  routes.rs  state.rs
src/api/dto/: create_payment.rs  get_summary.rs  mod.rs
src/core/: error.rs  get_summary.rs  health_check.rs  mod.rs  payment_processor.rs
src/queue/: mod.rs  payment_consumer.rs
