[package]
name = "rinha"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = {version = "0.4.41", features = ['serde']}
deadpool-redis = "0.22.0"
dotenv = "0.15.0"
redis = "0.32.4"
reqwest = {version = "0.12.22", features = ['json'] }
serde = {version = "1.0.219", features =["derive"]}
serde_json = "1.0.140"
tokio = "1.46.1"
